# saas-rag

./: .dockerignore  .env.docker  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  FEATURES.md  IMPROVEMENTS_ANALYSIS.md  README.md  RUN_GUIDE.md  SETUP.md  database_analysis.md  dev-start.ps1  dev-start.sh  docker-compose.yml  improvements.md  pyproject.toml  rag.docx  run-rag.ps1  scraper-improvements.md  start.sh  test-widget.html
chic-interface-design/: build-ui.sh  index.html  package-lock.json  package.json  patch.cjs  patch2.cjs  vite.config.ts  vite.spa.config.ts
chic-interface-design/dist-spa/: index.html
chic-interface-design/src/: main.tsx  routeTree.gen.ts  styles.css
data/: raft_state.json
docker/: docker-entrypoint.sh
docs/: FEATURES.md  SETUP.md  presentation-script.md
docs/deployment/: 01-docker-compose-deployment.md  02-vps-baremetal-deployment.md  03-cloud-managed-platforms.md  04-kubernetes-k3s-deployment.md  05-hybrid-distributed-deployment.md  06-mvp-minimum-production.md  07-on-premises-windows-server.md  PROJECT_DOCUMENTATION.md  README.md
docs/notes/: commands-to-run.txt
hosting-analysis/: 01-docker-compose-deployment.md  02-vps-baremetal-deployment.md  03-cloud-managed-platforms.md  04-kubernetes-k3s-deployment.md  05-hybrid-distributed-deployment.md  06-mvp-minimum-production.md  PROJECT_DOCUMENTATION.md  README.md
nginx/: nginx.conf
nginx/ssl/: cert.pem  key.pem
ocr-service-main/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  FEATURES.md  README.md  SETUP.md  main.py  pyproject.toml  pytest.ini
ocr-service-main/api/: dependencies.py  middleware.py
ocr-service-main/api/routers/: __init__.py  advanced.py  benchmark.py  health.py  ocr.py
ocr-service-main/config/: settings.py
ocr-service-main/ocr/: __init__.py  engine.py
ocr-service-main/ocr/engines/: base.py  mistral_engine.py  orchestrator.py  paddle_engine.py
ocr-service-main/pdf/: __init__.py  decorative_filter.py  image_extractor.py  image_processor.py  page_renderer.py  pipeline.py  text_extractor.py
ocr-service-main/postprocessing/: __init__.py  extractor.py  japanese_corrector.py  table_parser.py
ocr-service-main/preprocessing/: __init__.py  preprocessor.py
ocr-service-main/schemas/: __init__.py  errors.py  ocr.py  responses.py
ocr-service-main/scripts/: process_error_files.py  test_pdf.py
ocr-service-main/services/: __init__.py  advanced_processor.py  batch_service.py  image_service.py  pdf_service.py  result_builder.py  validator.py
ocr-service-main/table_detection/: __init__.py  models.py
ocr-service-main/tests/: conftest.py
ocr-service-main/tests/integration/: test_batch_endpoint.py  test_health.py  test_image_endpoint.py  test_pdf_endpoint.py
ocr-service-main/tests/unit/: test_config.py
ocr-service-main/utils/: __init__.py  language_detector.py  logger.py  request_id.py
rbs-rag-node/: .env  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  FEATURES.md  SETUP.md  docker-compose.node.yml  generate-index.cjs  package-lock.json  package.json
rbs-rag-node/prisma/: dev.db  schema.prisma
scraper-service/: .gitignore  API.md  Dockerfile  FEATURES.md  FRONTEND.md  IMPLEMENTATION_SUMMARY.md  QUICK_TEST.sh  README.md  TEST_GUIDE.md  requirements.txt
scraper-service-main/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  PRODUCTION_ROADMAP.md  SETUP.md  download_pdfs.py  download_tax_docs.py  download_uae_legislation.py  requirements.txt
storage/: raft_state.json
tests/: test_admin_login.py  test_chunking.py  test_cli.py  test_config.py  test_engine_retrieval.py  test_llm.py
(+174 files in other folders)
