[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rbs-rag"
version = "0.1.0"
description = "CLI-first reusable RAG foundation with local retrieval and API-based LLM generation."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "sqlite-utils>=3.37",
    "httpx>=0.27.0",
    "python-json-logger>=2.0.7",
    "pillow>=11.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
pdf = ["pypdf>=4.0", "pymupdf>=1.24.3"]
excel = ["openpyxl>=3.1", "xlrd>=2.0"]
pptx = ["python-pptx>=1.0"]
local-ml = ["fastembed>=0.3", "sentence-transformers>=3.0", "qdrant-client>=1.9"]
qdrant = ["qdrant-client>=1.9"]
ocr = [
    "opencv-python-headless>=4.9.0.80",
    "paddleocr>=3.0.0",
    "onnxruntime>=1.18.0",
]
scraper = [
    "beautifulsoup4==4.12.3",
    "cloudscraper==1.2.71",
    "playwright>=1.49.0",
    "selenium>=4.26.1",
    "webdriver-manager>=4.0.2",
    "pdfminer.six==20221105",
    "openpyxl==3.1.5",
    "charset-normalizer==3.4.0",
]
all = ["pypdf>=4.0", "fastembed>=0.3", "sentence-transformers>=3.0", "qdrant-client>=1.9", "opencv-python-headless>=4.9.0.80", "paddleocr>=3.0.0", "onnxruntime>=1.18.0", "beautifulsoup4==4.12.3", "cloudscraper==1.2.71", "playwright>=1.49.0", "selenium>=4.26.1", "webdriver-manager>=4.0.2", "pdfminer.six==20221105", "openpyxl==3.1.5", "charset-normalizer==3.4.0", "python-pptx>=1.0"]

[project.scripts]
rag = "rbs_rag.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rbs_rag*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing -v"
filterwarnings = [
    "ignore::DeprecationWarning",
]