[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-service"
version = "1.0.0"
description = "Production-ready OCR microservice using PaddleOCR and FastAPI"
# NOTE: paddlepaddle==2.6.1 and paddleocr==2.7.3 require Python <=3.12.
# On Python 3.14+ install them in a compatible Python environment:
#   https://www.paddlepaddle.org.cn/install/quick
requires-python = ">=3.10"
dependencies = [
    # Python 3.14 compatible versions
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pymupdf>=1.24.3",
    "opencv-python-headless>=4.9.0.80",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "python-json-logger>=2.0.7",
    "pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis==6.100.1",
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0",
    "pytest-mock==3.14.0",
]
# paddle extra: install with onnxruntime for Python 3.14 support
# paddlepaddle wheels only exist for Python 3.9-3.11
# For Python 3.14, use onnxruntime engine instead
paddle = [
    "paddleocr>=3.0.0",
    "onnxruntime>=1.18.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "api*",
    "services*",
    "preprocessing*",
    "pdf*",
    "ocr*",
    "postprocessing*",
    "schemas*",
    "utils*",
    "config*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing -v"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
omit = [
    "tests/*",
    "venv/*",
    "setup.py",
]
